Modify reviewers/q1/math pages

--- a/static/materials/reviewers/q1/math/content.html
+++ b/static/materials/reviewers/q1/math/content.html
@@ -1,3 +1,3 @@
 <h2>Welcome to the SPARC reviewers for Mathematics 2!</h2>
 
-<a href="matrices">Matrices</a>
+<a href="./math/matrices">Matrices</a>
