--- a/static/materials/reviewers/q1/math/content.html
+++ b/static/materials/reviewers/q1/math/content.html
@@ -1,8 +1,8 @@
 <h2>Welcome to the SPARC reviewers for Mathematics 2!</h2>
 
 <h3>Found some errors?</h3>
-Please point out any typographical, grammatical, or mathematical errors inthe reviewers! If you found one, please DM <b>SPARC '28#8452</b> or <b>mathemolympiad#8180</b> in Discord, or email <a href="pshs.mc.sparc.28@gmail.com"><b>pshs.mc.sparc.28@gmail.com</b></a>.
+Please point out any typographical, grammatical, or mathematical errors inthe reviewers! If you found one, please DM <b>SPARC '28#8452</b> or <b>mathemolympiad#8180</b> in Discord, or email <b>pshs.mc.sparc.28@gmail.com</b>.
 
 <h3>The Reviewers</h3>
-<a href="./math/matrices">Matrices</a>
-<a href="./math/letv">Matrices</a>
+<a href="./math/matrices">Matrices</a><br />
+<a href="./math/letv">Linear Equations in Two Variables</a>
