--- a/static/materials/reviewers/q1/math/letv/content.html
+++ b/static/materials/reviewers/q1/math/letv/content.html
@@ -1,1 +1,1 @@
-<a href="./letv/cartesian_summary">Summary: Cartesian Coordinate System and Lines</a>
+<a href="./letv/cartesian_summary">Summary: Cartesian Coordinate System and Lines</a> <i>(by Ceph S.)</i>
