--- a/static/materials/reviewers/q1/math/matrices/content.html
+++ b/static/materials/reviewers/q1/math/matrices/content.html
@@ -1,1 +1,1 @@
-<a href="./matrices/matrices_intro">Introduction to Matrices</a>
+<a href="./matrices/matrices_intro">Introduction to Matrices</a> <i>(by Kaiser C.)</i>
