--- a/static/materials/reviewers/q1/math/matrices/content.html
+++ b/static/materials/reviewers/q1/math/matrices/content.html
@@ -1,2 +1,2 @@
-<a href="./matrices/matrices_intro">Introduction to Matrices</a> <i>(by Kaiser C.)</i>
+<a href="./matrices/matrices_intro">Introduction to Matrices</a> <i>(by Kaiser C.)</i><br />
 <a href="./matrices/matrices_ops">Matrix Operations</a> <i>(by Kaiser C.)</i>
